# ModelProxy

./: .dockerignore  .gitignore  API.md  CODEBASE_ANALYSIS.md  Dockerfile  README.md  docker-compose.yml  run_relay.py
docker/: index-redirect.html  nginx.conf
docs/: arch-cluster-upgrade.md
examples/: quickstart.py
feishu_mock/: __init__.py  app.py  config.py  event_builder.py  feishu_crypto.py  store.py
feishu_mock/examples/: bot_claude.py  bot_claude_ws.py  bot_gateway_ws.py  fake_bot.py
outside_caller/: anthropic_compat.py  anthropic_sse.py  api_keys.py  bot_pool.py  config.py  errors.py  feishu_client.py  feishu_token.py  keys.py  models.py  nodes.py  oauth_once.py  rate_limit.py  relay_codec.py  relay_server.py  slot_pool.py  stream_router.py  talk.py  token_estimator.py  truncator.py  usage.py
outside_caller/dashboard/: index.html
outside_caller/dashboard/static/: app.js  style.css
outside_caller/tests/: test_anthropic_compat.py  test_relay_server_v301.py  test_send_request.py  test_stream_router_v301.py  test_token_estimator.py  test_truncator.py
relay_bot/: .dockerignore  DEPLOY-v3.md  DEPLOY.md  Dockerfile  README.md  config.example.yaml  install.sh  pyproject.toml  relay-bot.service
relay_bot/relay_bot/: __init__.py  chunk_assembler.py  cli.py  config.py  ctrl.py  heartbeat.py  stream_emitter.py  upgrade.py  worker.py
relay_bot/scripts/: list_chats.py
relay_bot/tests/: test_chunk_assembler.py  test_worker_v301.py
