[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "feishu-relay-bot"
version = "3.0.0"
description = "Feishu Relay Bot — 飞书消息通道 AI 中继节点"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
dependencies = [
    "lark-oapi>=1.3",
    "httpx>=0.27",
    "pyyaml>=6.0",
]

[project.scripts]
feishu-relay-bot = "relay_bot.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["relay_bot"]
